# AttDown4Acumatica

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: install.md
endpoint-extensions/: ComplianceDocument.md
examples/: ap-bills.yaml  compliance.yaml  projects.yaml
pyinstaller/: attdown.spec
src/attdown/: __init__.py  __main__.py  auth.py  checkpoint.py  cli.py  client.py  config.py  downloader.py  match.py  sinks.py
src/attdown/web/: __init__.py  app.py
src/attdown/web/templates/: _fields.html  _fs_list.html  _match_preview.html  base.html  index.html  job.html  run.html
tests/: test_smoke.py  test_web_security.py
